src/test/ui/writing-to-immutable-vec.stderr
error[E0596]: cannot borrow immutable local variable `v` as mutable
  --> $DIR/writing-to-immutable-vec.rs:3:5
   |
LL |     let v: Vec<isize> = vec![1, 2, 3];
   |         - help: make this binding mutable: `mut v`
LL |     v[1] = 4; //~ ERROR cannot borrow immutable local variable `v` as mutable
   |     ^ cannot borrow mutably

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
